OpenSearchServer
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

OpenSearchServer 1.3

New features:
- 3549257: A delete all feature
- 3548884: A flush crawl cache scheduler task
- 3548287: Disable Meta NoIndex on HTML parser
- 3546276: Dailymotion and Vimeo API support
- 3545447: Youtube API support
- 3539147: URL and FILE database scheduler task
- 3539146: Tag boost in HTML parser	
- 3539144: A number format filter	
- 3537132: JBIG2 format support for PDF text extraction
- 3535780: Classifier feature
- 3535777: SOAP WebService
- 3523453: Image Parser with OCR
- 3519206: XSL support on XML upload
- 3510432: Support of Arabic language
- 3512267: OCR Integration
- 3509336: Adding regular expression capture in parser	
- 3485668: Jsoup HTML parser
- 3471808: Consecutive duplicate characters filter
- 3467459: Phonetic filters
- 3467437: A filter to extract the domain information
- 3466448: Multiple OpenSearchServer instances on one Tomcat server
- 3466447: Adding NumDeletedDocs in Runtime/Index
- 3422180: Upgrade to ZK 5.0.10
- 3417863: Upgrade Tomcat to version 6.0.35
- 3421240: JSON response for OpenSearchServer
- 3386107: OpenSearch Standards

OpenSearchServer 1.2.4

New features:
- 3527810: Removing fragment in URL
- 3518687: URL normalization required in the Web crawler
- 3510598: Add CSV format in the select XML/HTTP API
- 3498421: Set a default URL value for replication
- 3498373: Remove script and object tag content in db crawler
- 3495004: Add progress info in scheduler task	
- 3490031: Asynchronous XML upload
- 3489935: Default stop words list
- 3489934: A default autocomplete field and analyzer
- 3489873: A scheduler task to copy terms to an index
- 3489642: Unable to scroll all the log in runtime/logs panel
- 3487772: Advanced spell check
- 3487219: RegExp filter for DatabaseCrawler
- 3483920: BoostQuery support