@@ -1,0 +1,49 @@
+/**   
+ * License Agreement for OpenSearchServer
+ *
+ * Copyright (C) 2012 Emmanuel Keller / Jaeksoft
+ * 
+ * http://www.open-search-server.com
+ * 
+ * This file is part of OpenSearchServer.
+ *
+ * OpenSearchServer is free software: you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
+ *
+ * OpenSearchServer is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with OpenSearchServer. 
+ *  If not, see <http://www.gnu.org/licenses/>.
+ **/
+
+package com.jaeksoft.searchlib.util;
+
+public class Geospatial {
+
+	public final static double WORLD_RAYON = 6371; // km
+
+	/**
+	 * Return the distance in KM between two points passed as latitude and
+	 * longitude in Radians
+	 * 
+	 * @param lon1
+	 * @param lat1
+	 * @param lon2
+	 * @param lat2
+	 * @return
+	 */
+	public final static double distanceRadians(double lon1, double lat1,
+			double lon2, double lat2) {
+		double x = (lon2 - lon1) * Math.cos((lat1 + lat2) / 2);
+		double y = (lat2 - lat1);
+		double d = Math.sqrt(x * x + y * y) * WORLD_RAYON;
+		return d;
+	}
+
+}
